@@ -1,5 +1,15 @@
 2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCbtree.h,
+	  src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc,
+	  src/z80/ralloc.c,
+	  src/SDCCbtree.cc,
+	  src/SDCCtree_dec.hpp:
+	  More preparations for Thorup-style spilllocation allocation.
+
+2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* Merge from trunk.
 
 2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
